--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "Simple tool to analysis",
   "dependencies": {
+    "bower": "^1.3.12",
     "express": "~4.9.2",
-    "mysql": "~2.5.0",
-    "bower": "^1.3.12"
+    "mmProps": "git://github.com/mmmuller/mmProps",
+    "mysql": "~2.5.0"
   },
   "scripts": {
     "postinstall": "node_modules/.bin/bower install"
