--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
-    "ng-table": "~0.5.4"
+    "ng-table": "~0.5.4",
+    "ng-table-export": "*"
   }
 }
