--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "~1.3.15",
     "bootstrap": "~3.3.4",
     "ng-table": "~0.5.4",
-    "ng-table-export": "*"
+    "ng-table-export": "*",
+    "angular-google-chart": "~0.0.11"
   }
 }
