--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "bower": "^1.3.12",
     "express": "~4.9.2",
     "mmProps": "git://github.com/mmmuller/mmProps",
-    "mysql": "~2.5.0"
+    "mysql": "~2.5.0",
+    "q": "^1.2.0"
   },
   "scripts": {
     "postinstall": "node_modules/.bin/bower install"
