--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "~3.3.4",
     "ng-table": "~0.5.4",
     "ng-table-export": "*",
-    "angular-google-chart": "~0.0.11"
+    "angular-google-chart": "~0.0.11",
+    "angular-route": "~1.3.15"
   }
 }
