--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "ng-table": "~0.5.4",
     "ng-table-export": "*",
     "angular-google-chart": "~0.0.11",
-    "angular-route": "~1.3.15"
+    "angular-route": "~1.3.15",
+    "ngprogress": "~1.0.7"
   }
 }
